--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=spring-boot
+
+management.endpoints.web.exposure.include=*
+
+my.app.language=eng
+
+spring.profiles.active=Turkish
+
