--- a/node-configuration/src/main/resources/application.properties
+++ b/node-configuration/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=node-configuration
+
+server.port=8888
+
+spring.cloud.config.server.git.uri=https://github.com/osmanyaycioglu/ms-20241010.git
+spring.cloud.config.server.git.search-paths=configs
+spring.cloud.config.server.git.default-label=master
