--- a/node-configuration/src/main/resources/application.properties
+++ b/node-configuration/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/osmanyaycioglu/ms-20241010.git
 spring.cloud.config.server.git.search-paths=configs
 spring.cloud.config.server.git.default-label=master
+
+encrypt.key=8ew7ryw8e7ry8w7er8w6er87w6er
