--- a/ms-order/src/main/resources/application.properties
+++ b/ms-order/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=ms-order
+spring.application.name=order
+
+server.port=${uygulama.portu:10000}
+
+spring.config.import=configserver:http://127.0.0.1:8888
+
+server.shutdown=graceful
