--- a/ms-order/src/main/resources/application.properties
+++ b/ms-order/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=${uygulama.portu:10000}
 spring.config.import=configserver:http://127.0.0.1:8888
 
 server.shutdown=graceful
+
+server.error.include-exception=true
+server.error.include-message=always
+server.error.include-binding-errors=always
