--- a/ms-order/src/main/resources/application.properties
+++ b/ms-order/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=order
 
+bounded.context.name=orderBoundedContext
+
 server.port=${uygulama.portu:10000}
 
 spring.config.import=configserver:http://127.0.0.1:8888
