--- a/ms-order/src/main/resources/application.properties
+++ b/ms-order/src/main/resources/application.properties
@@ -11,3 +11,11 @@ server.shutdown=graceful
 server.error.include-exception=true
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.jpa.database=POSTGRESQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
