--- a/configs/application.properties
+++ b/configs/application.properties
@@ -10,3 +10,9 @@ eureka.client.fetch-registry=true
 eureka.client.healthcheck.enabled=true
 
 eureka.instance.prefer-ip-address=true
+
+
+spring.rabbitmq.username=user
+spring.rabbitmq.password=password
+spring.rabbitmq.port=5672
+spring.rabbitmq.host=localhost
