--- a/configs/application.properties
+++ b/configs/application.properties
@@ -16,3 +16,5 @@ spring.rabbitmq.username=user
 spring.rabbitmq.password=password
 spring.rabbitmq.port=5672
 spring.rabbitmq.host=localhost
+
+app.owner=osman
