--- a/ms-order/src/main/resources/application.properties
+++ b/ms-order/src/main/resources/application.properties
@@ -24,3 +24,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.security.user.name=user
 spring.security.user.password=123456
+
+management.endpoints.web.exposure.include=*
+management.endpoint.env.show-values=always
+
+management.endpoint.shutdown.enabled=true
+management.endpoint.auditevents.enabled=true
