--- a/ms-notify/src/main/resources/application.properties
+++ b/ms-notify/src/main/resources/application.properties
@@ -6,3 +6,5 @@ server.port=${uygulama.portu:12000}
 
 spring.config.import=configserver:http://127.0.0.1:8888
 
+management.endpoints.web.exposure.include=*
+
